[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_sqlalchemy_toolkit"
version = "0.0.2.3"
authors = [
  { name="Egor Kondrashov", email="e.kondr01@gmail.com" },
]
description = "FastAPI SQLAlchemy Toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "fastapi_pagination>=0.12.6",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2"
]

[project.urls]
"Homepage" = "https://github.com/e-kondr01/fastapi-sqlalchemy-toolkit"