[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_sqlalchemy_toolkit"
version = "0.7.1"
authors = [
  { name="Egor Kondrashov", email="e.kondr01@gmail.com" },
]
description = "FastAPI SQLAlchemy Toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "fastapi_pagination>=0.12.12",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/e-kondr01/fastapi-sqlalchemy-toolkit"
