[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_sqlalchemy_toolkit"
version = "0.7.15"
authors = [
  { name="Egor Kondrashov", email="e.kondr01@gmail.com" },
]
description = "FastAPI SQLAlchemy Toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "fastapi_pagination>=0.12.12",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/e-kondr01/fastapi-sqlalchemy-toolkit"

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
    # mccabe
    "C901",
    # flake8-return
    "RET",
    # pep8-naming
    "N",
    # flake8-annotations
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-blind-except
    "BLE",
    # flake8-boolean-trap
    "FBT",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-self
    "SLF",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # flake8-todos
    "TD",
    # flake8-fixme
    "FIX",
    # eradicate
    "ERA",
    # perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]
ignore = ["ANN101", "ANN102", "ANN401", "PLR0913", "RUF001", "RUF002", "RUF003", "SLF001", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101"]
